switch to typescript and add kadena setup

--- a/package.json
+++ b/package.json
@@ -6,28 +6,51 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:types": "sh ./bin/generate-types.sh",
+    "cli": "tsx --env-file .env ./bin/cli.ts ",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "verify": "tsc --pretty",
+    "format": "prettier --write src"
   },
   "dependencies": {
-    "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.13.3",
+    "@react-three/drei": "9.92.7",
+    "@react-three/fiber": "8.15.13",
     "@react-three/postprocessing": "^2.15.11",
-    "@types/three": "0.152.1",
-    "framer-motion": "^10.17.0",
-    "playroomkit": "^0.0.51",
+    "@types/three": "0.160.0",
+    "framer-motion": "^10.17.4",
+    "playroomkit": "^0.0.53",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.153.0",
-    "three-stdlib": "^2.28.7",
-    "tinygesture": "^3.0.0"
+    "three": "0.160.0",
+    "three-stdlib": "^2.28.11",
+    "tinygesture": "^3.0.0",
+    "@kadena/client": "^1.7.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@kadena/pactjs-cli": "^1.7.0",
+    "@kadena/types": "^0.6.0",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "3.5.0",
     "autoprefixer": "^10.4.16",
+    "citty": "^0.1.5",
+    "clipboardy": "^4.0.0",
+    "consola": "^3.2.3",
+    "envalid": "8.0.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
-    "vite": "^4.1.0"
+    "prettier": "3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.10",
+    "tailwindcss": "^3.4.0",
+    "tsx": "4.7.0",
+    "typescript": "^5.3.3",
+    "vite": "5.0.10"
   }
 }
