--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "format": "prettier --write src"
   },
   "dependencies": {
-    "@kadena/client": "^1.7.0",
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.15.13",
     "@react-three/postprocessing": "^2.15.11",
@@ -26,7 +25,10 @@
     "react-dom": "^18.2.0",
     "three": "0.160.0",
     "three-stdlib": "^2.28.11",
-    "tinygesture": "^3.0.0"
+    "tinygesture": "^3.0.0",
+    "@kadena/client": "^1.7.0",
+    "@kadena/pactjs": "^0.4.2",
+    "@tanstack/react-query": "^5.17.1"
   },
   "devDependencies": {
     "@kadena/pactjs-cli": "^1.7.0",
