--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@kadena/client": "^1.7.0",
+    "@kadena/pactjs": "^0.4.2",
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.15.13",
     "@react-three/postprocessing": "^2.15.11",
     "@react-three/rapier": "^1.2.1",
+    "@tanstack/react-query": "^5.17.1",
     "@types/three": "0.160.0",
     "framer-motion": "^10.17.4",
     "playroomkit": "^0.0.53",
@@ -26,9 +29,7 @@
     "three": "0.160.0",
     "three-stdlib": "^2.28.11",
     "tinygesture": "^3.0.0",
-    "@kadena/client": "^1.7.0",
-    "@kadena/pactjs": "^0.4.2",
-    "@tanstack/react-query": "^5.17.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@kadena/pactjs-cli": "^1.7.0",
@@ -36,6 +37,7 @@
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "@vitejs/plugin-react": "^4.2.1",
