--- a/package.json
+++ b/package.json
@@ -20,26 +20,27 @@
     "@react-three/fiber": "8.15.13",
     "@react-three/postprocessing": "^2.15.11",
     "@react-three/rapier": "^1.2.1",
-    "@tanstack/react-query": "^5.17.1",
     "@types/three": "0.160.0",
     "framer-motion": "^10.17.4",
-    "playroomkit": "^0.0.53",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "0.160.0",
     "three-stdlib": "^2.28.11",
     "tinygesture": "^3.0.0",
-    "uuid": "^9.0.1"
+    "@tanstack/react-router": "^1.1.9",
+    "@tanstack/router-devtools": "^1.1.9",
+    "@tanstack/react-query": "^5.17.8",
+    "@tanstack/react-query-devtools": "^5.17.8"
   },
   "devDependencies": {
     "@kadena/pactjs-cli": "^1.7.0",
     "@kadena/types": "^0.6.0",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
+    "@types/node": "^20.10.7",
+    "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "3.5.0",
     "autoprefixer": "^10.4.16",
@@ -50,12 +51,12 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.33",
     "prettier": "3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.10",
-    "tailwindcss": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
     "tsx": "4.7.0",
     "typescript": "^5.3.3",
-    "vite": "5.0.10"
+    "vite": "5.0.11"
   }
 }
