--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^5.17.1",
     "@types/three": "0.160.0",
     "framer-motion": "^10.17.4",
+    "jotai": "^2.6.1",
     "playroomkit": "^0.0.53",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
