--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@react-three/fiber": "8.15.13",
     "@react-three/postprocessing": "^2.15.11",
     "@react-three/rapier": "^1.2.1",
+    "@tanstack/react-query": "^5.17.8",
+    "@tanstack/react-query-devtools": "^5.17.8",
+    "@tanstack/react-router": "^1.1.9",
+    "@tanstack/router-devtools": "^1.1.9",
     "@types/three": "0.160.0",
     "framer-motion": "^10.17.4",
     "jotai": "^2.6.1",
@@ -28,10 +32,7 @@
     "three": "0.160.0",
     "three-stdlib": "^2.28.11",
     "tinygesture": "^3.0.0",
-    "@tanstack/react-router": "^1.1.9",
-    "@tanstack/router-devtools": "^1.1.9",
-    "@tanstack/react-query": "^5.17.8",
-    "@tanstack/react-query-devtools": "^5.17.8"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@kadena/pactjs-cli": "^1.7.0",
