--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@tanstack/react-router": "^1.1.9",
     "@tanstack/router-devtools": "^1.1.9",
     "@types/three": "0.160.0",
+    "classnames": "^2.5.1",
     "framer-motion": "^10.17.4",
     "jotai": "^2.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.0",
     "three": "0.160.0",
     "three-stdlib": "^2.28.11",
     "tinygesture": "^3.0.0",
