--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "three": "0.160.0",
     "three-stdlib": "^2.28.11",
     "tinygesture": "^3.0.0",
+    "ua-parser-js": "^1.0.37",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/node": "^20.10.7",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/ua-parser-js": "^0.7.39",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
