--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,7 @@
 APP_NETWORK_ID=fast-development
 APP_CHAIN_ID=1
-APP_CHAINWEB_RPC_URL=https://kdevnet1.salamaashoush.com
+APP_PACT_SERVER=true
+APP_CHAINWEB_RPC_URL=http://localhost:8080
 # The Devnet comes pre-installed with test accounts with a high balance. The keys of these accounts
 # can be found here: https://github.com/kadena-io/chainweb-node/blob/master/pact/genesis/devnet/keys.yaml.
 APP_FUNDING_ACCOUNT="sender00"
